--- a/style.css
+++ b/style.css
@@ -1,5 +1,10 @@
+@font-face {
+    font-family: 'Norse';
+    src: url("./assets/Norsebold.otf");
+}
+
 body {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Open Sans", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   font-weight: normal;
   font-style: normal;
   padding: 0;
@@ -12,6 +17,7 @@ body {
     align-items: stretch;
     height: 100vh;
     width: 100vw;
+    overflow: hidden;
 }
 
 .image-container {
@@ -30,19 +36,21 @@ body {
 .logo {
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
-    justify-content: center;
+    justify-content: center;    
     align-items: center;
-    margin: 150px 0;
+    margin: 90px 0;
 }
 
 .logo-img {
-    width: 70px;
+    width: 50px;
     height: auto;
 }
 
 .logo-text {
+    font-family: "Norse", system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     color: white;
-    font-size: 40px;
+    font-size: 50px;
+    font-weight: bolder;
 }
 
 .artist {
@@ -85,6 +93,12 @@ fieldset {
     padding-bottom: 30px;
 }
 
+fieldset:after {
+    content:"";
+    transform: scale(1.1) translateY(34px);
+    box-shadow: 0px 0px 10px 2px #000000;
+}
+
 .input-row {
     display: flex;
     gap: 100px;
@@ -107,11 +121,28 @@ input {
     border-color: rgba(128, 128, 128, 0.322);
 }
 
-input:invalid {
-    border: 1px solid red;
+.is-valid:invalid, .password {
+    border: 1px solid rgba(255, 0, 0, 0.8);
 }
 
-form button {
+.phone-error, .error, #show-password {
+    margin: 0;
+    padding: 0;
+    font-size: 10px;
+    color: rgba(255, 0, 0, 0.8);
+    display: none;
+}
+
+#show-password {
+    display: block;
+    color: blue;
+    cursor: pointer;
+    background-color: white;
+    text-align: left;
+    border: none;
+}
+
+form button:nth-child(2) {
     background-color: rgb(60, 112, 60);
     border: none;
     color: white;
